<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartProject</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="low">low</string>
    <string name="middle">middle</string>
    <string name="high">high</string>
    <string name="setting">Settings</string>
    <string name="Local_mode_enabled">Local mode enabled</string>
    <string name="delete">Delete</string>
    <string name="offset">Offset</string>
    <string name="eco">Eco</string>
    <string name="confort">Confort</string>
    <string name="stopped">Stopped</string>
    <string name="freeze">Freeze</string>
    <string name="prog">Prog</string>
    <string name="title_activity_zone_detail">ZoneDetailActivity</string>
    <string name="mode">Mode : </string>
    <string name="consigne_temperature">Setpoint : </string>
    <string name="spinner_title">Message</string>
    <string name="spinner_please_wait">Patientez s\'il vous plaît...</string>
    <string name="error_login_popup_title">Message</string>
    <string name="error_login_popup_msg">Connection impossible</string>
    <string name="title_activity_bluetooth">BluetoothActivity</string>

</resources>
