<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TableRow android:layout_margin="10dp">
            <TextView
                android:layout_margin="10dp"
                android:text="@string/mode"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_margin="10dp"
                android:text="@string/eco"
                android:textSize="24sp"
                android:id="@+id/zoneModeTextView" />
        </TableRow>

        <TableRow android:layout_margin="10dp">
            <TextView
                android:layout_margin="10dp"
                android:text= "@string/consigne_temperature"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_margin="10dp"
                android:text="25°C"
                android:textSize="24sp"
                android:id="@+id/zoneSetPointTextView" />
        </TableRow>

    </TableLayout>


    <ListView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/heatersListView" />

</LinearLayout>