<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CUISINE_1"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textSize="32dp"
        android:layout_margin="10dp"
        android:id="@+id/heaterNameTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:text="@string/setting"
        android:textStyle="bold"
        android:layout_margin="10dp"/>

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low"
            android:textSize="24sp"
            android:id="@+id/powerLowRadioButton" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/middle"
            android:textSize="24sp"
            android:id="@+id/powerMediumRadioButton" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high"
            android:textSize="24sp"
            android:id="@+id/powerHighRadioButton" />
        </RadioGroup>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_margin="10dp"
            android:id="@+id/onlineImageView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="21 °C"
            android:layout_margin="10dp"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"
            android:textColor="@android:color/holo_blue_dark"
            android:id="@+id/temperatureSetPointTextView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="CONFORT"
            android:layout_margin="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:id="@+id/heaterModeTextView" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:layout_margin="10dp"
            android:textSize="24sp"
            android:text="@string/Local_mode_enabled"/>

        <CheckBox
            android:id="@+id/localModeCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"/>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="24sp"
            android:layout_alignParentLeft="true"
            android:text="@string/offset"/>
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="24sp"
            android:layout_alignParentRight="true"
            android:text="-8°C"
            android:id="@+id/TemperatureOffsetTextView" />
        </RelativeLayout>

    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:progress="50"
        android:id="@+id/TemperatureOffsetSeekBar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="2"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:layout_margin="10dp"/>

</LinearLayout>